examples/test_package/Double_dc_no_tool/steps/benchquery_rough_run1/#test_results_result.txt
Error evaluating Problog model:
    target, results = self._ground(db, term, target, silent_fail=False, **kwdargs)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine.py", line 439, in _ground
    raise UnknownClause(term.signature, location=db.lineno(term.location))
problog.engine.UnknownClause: No clauses found for 'query_pop/1' at 59:7.% Problog Inference Result：
query_pop([china, 244.0828402366864, france, 246.4788732394366]) = 1.0000
query_pop([indonesia, 223.859649122807, pakistan, 219.2926045016077]) = 1.0000
query_pop([italy, 477.58620689655174, philippines, 461.1111111111111]) = 1.0000
query_pop([ethiopia, 77.71428571428571, mexico, 76.04712041884817]) = 1.0000